feat: common, logo 타입스크립트 적용 완료

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
               <div class="selected-image" id="selectedImageApp2">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent2, 'chooseImg2')">↻ Reset</span>
+                  <span class="selected-image-position-reset">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -408,7 +408,7 @@
               <div class="selected-image" id="selectedImageApp3">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent3, 'chooseImg3')">↻ Reset</span>
+                  <span class="selected-image-position-reset">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -459,7 +459,7 @@
               <div class="selected-image" id="selectedImageApp4">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent4, 'chooseImg4')">↻ Reset</span>
+                  <span class="selected-image-position-reset">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -519,7 +519,7 @@
               <div class="selected-image" id="selectedImageApp5">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent5, 'chooseImg5')">↻ Reset</span>
+                  <span class="selected-image-position-reset">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -564,7 +564,7 @@
               <div class="selected-image" id="selectedImageApp6">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent6, 'chooseImg6')">↻ Reset</span>
+                  <span class="selected-image-position-reset">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -615,7 +615,7 @@
               <div class="selected-image" id="selectedImageApp7">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent7, 'chooseImg7')">↻ Reset</span>
+                  <span class="selected-image-position-reset">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -672,7 +672,7 @@
               <div class="selected-image" id="selectedImageApp8">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent8, 'chooseImg8')">↻ Reset</span>
+                  <span class="selected-image-position-reset">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -717,7 +717,7 @@
               <div class="selected-image" id="selectedImageApp9">
                 <div class="selected-image-position">
                   <span></span>
-                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent9, 'chooseImg9')">↻ Reset</span>
+                  <span class="selected-image-position-reset">↻ Reset</span>
                 </div>
               </div>
             </div>
@@ -802,7 +802,7 @@
       </footer>
     </div>
 
-    <script type="module" src="./js/common.js" defer></script>
+    <script type="module" src="js/common.ts" defer></script>
     <script type="module" src="./js/app1.js" defer></script>
     <script type="module" src="./js/app2.js" defer></script>
     <script type="module" src="./js/app3.js" defer></script>
