fix: 타입 추가 완료

--- a/about.html
+++ b/about.html
@@ -144,6 +144,6 @@
     </div>
   </body>
 
-  <script src="./js/logo.js" defer></script>
-  <script src="./js/about.js" defer></script>
+  <script type="module" src="./js/logo.ts"></script>
+  <script type="module" src="./js/about.ts"></script>
 </html>
