--- a/privacy.html
+++ b/privacy.html
@@ -172,5 +172,5 @@
     </div>
   </body>
 
-  <script src="./js/logo.js" defer></script>
+  <script type="module" src="./js/logo.ts"></script>
 </html>
