--- a/index.html
+++ b/index.html
@@ -802,18 +802,18 @@
       </footer>
     </div>
 
-    <script type="module" src="js/common.ts" defer></script>
-    <script type="module" src="./js/app1.js" defer></script>
-    <script type="module" src="./js/app2.js" defer></script>
-    <script type="module" src="./js/app3.js" defer></script>
-    <script type="module" src="./js/app4.js" defer></script>
-    <script type="module" src="./js/app5.js" defer></script>
-    <script type="module" src="./js/app6.js" defer></script>
-    <script type="module" src="./js/app7.js" defer></script>
-    <script type="module" src="./js/app8.js" defer></script>
-    <script type="module" src="./js/app9.js" defer></script>
-    <script type="module" src="./js/app10.js" defer></script>
-    <script type="module" src="./js/logo.js" defer></script>
+    <script type="module" src="./js/common.ts"></script>
+    <script type="module" src="./js/app1.ts"></script>
+    <script type="module" src="./js/app2.ts"></script>
+    <script type="module" src="./js/app3.ts"></script>
+    <script type="module" src="./js/app4.ts"></script>
+    <script type="module" src="./js/app5.ts"></script>
+    <script type="module" src="./js/app6.ts"></script>
+    <script type="module" src="./js/app7.ts"></script>
+    <script type="module" src="./js/app8.ts"></script>
+    <script type="module" src="./js/app9.ts"></script>
+    <script type="module" src="./js/app10.ts"></script>
+    <script type="module" src="./js/logo.ts"></script>
 
   </body>
 </html>
