fix: edit logo motion

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
       </div>
 
       <footer>
-        <p>Copyright © 2023 PlusTypo</p>
+        <p>Copyright © <span id="year"></span> PlusTypo</p>
         <address>
           Send your feedback and creations to
           <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>
@@ -142,8 +142,8 @@
         </p>
       </footer>
     </div>
-  </body>
 
-  <script type="module" src="./js/logo.ts"></script>
-  <script type="module" src="./js/about.ts"></script>
+    <script src="./js/logo.ts"></script>
+    <script type="module" src="./js/about.ts"></script>
+  </body>
 </html>
