--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
       
       <!-- footer -->
       <footer>
-        <p>Copyright © 2023 PlusTypo</p>
+        <p>Copyright © <span id="year"></span> PlusTypo</p>
         <address>
           Send your feedback and creations to <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>
         </address>
@@ -802,7 +802,7 @@
       </footer>
     </div>
 
-    <script type="module" src="./js/common.ts"></script>
+    <script src="./js/common.ts"></script>
     <script type="module" src="./js/app1.ts"></script>
     <script type="module" src="./js/app2.ts"></script>
     <script type="module" src="./js/app3.ts"></script>
@@ -813,7 +813,7 @@
     <script type="module" src="./js/app8.ts"></script>
     <script type="module" src="./js/app9.ts"></script>
     <script type="module" src="./js/app10.ts"></script>
-    <script type="module" src="./js/logo.ts"></script>
+    <script src="./js/logo.ts"></script>
 
   </body>
 </html>
