--- a/privacy.html
+++ b/privacy.html
@@ -160,7 +160,7 @@
       </div>
 
       <footer>
-        <p>Copyright © 2023 PlusTypo</p>
+        <p>Copyright © <span id="year"></span> PlusTypo</p>
         <address>
           Send your feedback and creations to
           <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>
@@ -170,7 +170,7 @@
         </p>
       </footer>
     </div>
-  </body>
 
-  <script type="module" src="./js/logo.ts"></script>
+    <script src="./js/logo.ts"></script>
+  </body>
 </html>
