--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-0T4BVMKTXC');
+      gtag('config', process.env.GOOGLE_ANALYTICS_ID);
     </script>
     <meta name="naver-site-verification" content="b80724f695100998b426a24e78d65b2cdf2cfccc" />
     <meta charset="utf-8" />
